# tgbotbase

./: README.md  bot.py  config.toml  config_reader.py  dispatcher.py  logs.py  pyproject.toml  requirements.txt
filters/: __init__.py  admin_filter.py
handlers/: __init__.py
handlers/callback/: common.py
handlers/message/: admin.py  common.py
keyboards/: __init__.py
keyboards/inline/: __init__.py  common.py
middlewares/: __init__.py  admin_middleware.py  logging_middleware.py
