[project]
name = "tgbasebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiodns>=3.4.0",
    "aiogram>=3.20.0.post0",
    "colorama>=0.4.6",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "structlog>=25.3.0",
    "tomlkit>=0.13.2",
]

[tool.setuptools]
py-modules = []
